--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,5 @@ dependencies = [
     "transformers[torch]>=4.55.3",
     "pillow>=11.3.0",
     "matplotlib>=3.10.5",
+    "torchvision>=0.23.0",
 ]
