--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,6 @@ dependencies = [
     "pillow>=11.3.0",
     "matplotlib>=3.10.5",
     "torchvision>=0.23.0",
+    "minio>=7.2.16",
+    "tqdm>=4.67.1",
 ]
