--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,4 +19,5 @@ dependencies = [
     "bitsandbytes>=0.47.0",
     "langchain>=0.3.27",
     "flagembedding>=1.3.5",
+    "llama-index>=0.14.2",
 ]
