--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,4 +20,10 @@ dependencies = [
     "langchain>=0.3.27",
     "flagembedding>=1.3.5",
     "llama-index>=0.14.2",
+    "ragas>=0.3.5",
+    "langchain-openai>=0.3.33",
+    "numpy>=2.3.2",
+    "pandas>=2.2.3",
+    "llama-index-core>=0.14.2",
+    "torch>=2.8.0",
 ]
