--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,21 +1,14 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        {
-            "name": "Debug current file with uv",
-            "type": "python",
-            "request": "launch",
-            "program": "${file}",
-            "python": "${workspaceFolder}/.venv/bin/python",
-            "cwd": "${workspaceFolder}",
-            "env": {
-                "PYTHONPATH": "${workspaceFolder}"
-            },
-            "console": "integratedTerminal",
-            "justMyCode": true
-        }
+      {
+        "name": "Python: Current File (맞춤 설정)",
+        "type": "python",
+        "request": "launch",
+        "module": "ragas_eval.script.evaluate_context_and_visual_recall",
+        "console": "integratedTerminal",
+        "cwd": "${workspaceFolder}",
+        "justMyCode": true
+      }
     ]
-}
+  }
